# gcli-api

./: .env.example  .gitignore  Build-Dockerfile  Doc.md  Dockerfile  Gen_Creds.bat  README.md  Run_Proxy.bat  app.py  debugging_log.txt  docker-compose.yml  known_issues.md  pyproject.toml
.github/workflows/: build-docker.yml
src/: auth.py  constants.py  credential_manager.py  dependencies.py  gemini_routes.py  generate_credentials.py  google_api_client.py  logger.py  main.py  models.json  models.py  openai_routes.py  openai_transformers.py  response_handler.py  settings.py  streaming.py  ui.py  utils.py
src/adapters/: adapters.py  claude_transformers.py  formatters.py  openai_transformers.py
src/api/: claude_routes.py  dependencies.py  gemini_routes.py  openai_routes.py  response_handler.py
src/core/: auth.py  credential_manager.py  exceptions.py  google_api_client.py  settings.py  streaming.py  upstream_auth.py
src/models/: base.py  claude.py  gemini.py  openai.py
src/services/: chat_completion_service.py  embedding_service.py  model_service.py  onboarding_service.py
src/tools/: generate_credentials.py
src/utils/: constants.py  logger.py  ui.py  utils.py
